# scriptframes

./: .gitignore  README.md  pyproject.toml
profiles/: bw-lineart.yaml  cinematic-character.yaml  psych-mascot.yaml
runpod/: README.md  setup.sh  setup_training.sh  verify_models.py
scripts/: download_civitai.py  download_lora.py  generate_one.py  lora_config.yaml  prepare_dataset.py  train_lora.py
src/scriptframes/: cli.py  config.py  generate.py  llm.py  manifest.py  prompt_template.py  schema.py  seeds.py  segment.py  upscale.py
